[gd_scene load_steps=6 format=4 uid="uid://byyig1mqymirh"]

[ext_resource type="TileSet" uid="uid://dvrbkuapcr681" path="res://tilesets/tileset.tres" id="1_2kux5"]
[ext_resource type="Script" uid="uid://bj1l407ues4al" path="res://ferry.gd" id="1_coo13"]
[ext_resource type="Texture2D" uid="uid://f02huqbpwt8f" path="res://sprites/kulangyu_ferry_roof.png" id="4_j461t"]
[ext_resource type="Shader" uid="uid://5tgugs840ltd" path="res://wall_transparent.gdshader" id="4_noucg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yk3c8"]
shader = ExtResource("4_noucg")
shader_parameter/scale = 0.006944444
shader_parameter/trans_rect_pos = Vector2(0, 0)
shader_parameter/trans_rect_size = Vector2(0, 0)

[node name="ferry" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_coo13")

[node name="floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAJAAAAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAKAAAAAgAAAAAAAAALAAAAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAA4AAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAwAAgAAAAAAAAANAA0AAgAAAAAAAAANAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAAAABAAAgAAAAAAAAABAA8AAgAAAAAAAAABABAAAgAAAAAAAAACAA8AAgAAAAAAAAACABAAAgAAAAAAAAADAA8AAgAAAAAAAAADABAAAgAAAAAAAAAEAA8AAgAAAAAAAAAEABAAAgAAAAAAAAAFAA8AAgAAAAAAAAAFABAAAgAAAAAAAAAGAA8AAgAAAAAAAAAGABAAAgAAAAAAAAAHAA8AAgAAAAAAAAAHABAAAgAAAAAAAAAIAA8AAgAAAAAAAAAIABAAAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAKAA8AAgAAAAAAAAAKABAAAgAAAAAAAAALAA8AAgAAAAAAAAALABAAAgAAAAAAAAAMAA8AAgAAAAAAAAAMABAAAgAAAAAAAAANAA8AAgAAAAAAAAANABAAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA8AAgAAAAAAAAAOABAAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA8AAgAAAAAAAAAPABAAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAADAAEAAgAAAAAAAAAEAAEAAgAAAAAAAAAFAAEAAgAAAAAAAAAGAAEAAgAAAAAAAAAHAAEAAgAAAAAAAAAIAAEAAgAAAAAAAAAJAAEAAgAAAAAAAAAKAAEAAgAAAAAAAAALAAEAAgAAAAAAAAAMAAEAAgAAAAAAAAAAAA4AAgAAAAAAAAABAA4AAgAAAAAAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="floor_internal" type="TileMapLayer" parent="floor"]
tile_map_data = PackedByteArray("AAACAA4AAgABAAAAAAADAA4AAgABAAAAAAAEAA4AAgABAAAAAAAFAA4AAgABAAAAAAAGAA4AAgABAAAAAAAHAA4AAgABAAAAAAAIAA4AAgABAAAAAAAJAA4AAgABAAAAAAAKAA4AAgABAAAAAAALAA4AAgABAAAAAAANAAIAAgABAAAAAAANAAMAAgABAAAAAAANAAQAAgABAAAAAAANAAUAAgABAAAAAAANAAYAAgABAAAAAAANAAcAAgABAAAAAAANAAgAAgABAAAAAAANAAkAAgABAAAAAAANAAoAAgABAAAAAAANAAsAAgABAAAAAAACAAwAAgABAAAAAAACAA0AAgABAAAAAAADAAwAAgABAAAAAAADAA0AAgABAAAAAAAEAAwAAgABAAAAAAAEAA0AAgABAAAAAAAFAAwAAgABAAAAAAAFAA0AAgABAAAAAAAGAAwAAgABAAAAAAAGAA0AAgABAAAAAAAHAAwAAgABAAAAAAAHAA0AAgABAAAAAAAIAAIAAgABAAAAAAAIAAMAAgABAAAAAAAIAAQAAgABAAAAAAAIAAUAAgABAAAAAAAIAAYAAgABAAAAAAAIAAcAAgABAAAAAAAIAAgAAgABAAAAAAAIAAkAAgABAAAAAAAIAAoAAgABAAAAAAAIAAsAAgABAAAAAAAIAAwAAgABAAAAAAAIAA0AAgABAAAAAAAJAAIAAgABAAAAAAAJAAMAAgABAAAAAAAJAAQAAgABAAAAAAAJAAUAAgABAAAAAAAJAAYAAgABAAAAAAAJAAcAAgABAAAAAAAJAAgAAgABAAAAAAAJAAkAAgABAAAAAAAJAAoAAgABAAAAAAAJAAsAAgABAAAAAAAJAAwAAgABAAAAAAAJAA0AAgABAAAAAAAKAAIAAgABAAAAAAAKAAMAAgABAAAAAAAKAAQAAgABAAAAAAAKAAUAAgABAAAAAAAKAAYAAgABAAAAAAAKAAcAAgABAAAAAAAKAAgAAgABAAAAAAAKAAkAAgABAAAAAAAKAAoAAgABAAAAAAAKAAsAAgABAAAAAAAKAAwAAgABAAAAAAAKAA0AAgABAAAAAAALAAIAAgABAAAAAAALAAMAAgABAAAAAAALAAQAAgABAAAAAAALAAUAAgABAAAAAAALAAYAAgABAAAAAAALAAcAAgABAAAAAAALAAgAAgABAAAAAAALAAkAAgABAAAAAAALAAoAAgABAAAAAAALAAsAAgABAAAAAAALAAwAAgABAAAAAAALAA0AAgABAAAAAAAMAAIAAgABAAAAAAAMAAMAAgABAAAAAAAMAAQAAgABAAAAAAAMAAUAAgABAAAAAAAMAAYAAgABAAAAAAAMAAcAAgABAAAAAAAMAAgAAgABAAAAAAAMAAkAAgABAAAAAAAMAAoAAgABAAAAAAAMAAsAAgABAAAAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="rails" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAABAABAAAAAAAAAABABAABAABAAAAAAADABAABAABAAAAAAAFABAABAABAAAAAAAHABAABAABAAAAAAAJABAABAABAAAAAAALABAABAABAAAAAAANABAABAABAAAAAAAPABAABAADAAAAAAAOABAABAACAAAAAAAMABAABAACAAAAAAAKABAABAACAAAAAAAIABAABAACAAAAAAAGABAABAACAAAAAAAEABAABAACAAAAAAACABAABAACAAAAAAAPAA4ABAAFAAAAAAAPAA8ABAAEAAAAAAAPAA0ABAAEAAAAAAAPAAAABAAHAAMAAAAPAAEABAAFAAAAAAAOAAAABAAAAAIAAAAMAAAABAAAAAIAAAAKAAAABAAAAAIAAAAIAAAABAAAAAIAAAAGAAAABAAAAAIAAAAEAAAABAAAAAIAAAACAAAABAAAAAIAAAAAAAAABAAAAAIAAAABAAAABAACAAMAAAADAAAABAACAAMAAAAFAAAABAACAAMAAAAHAAAABAACAAMAAAAJAAAABAACAAMAAAALAAAABAACAAMAAAANAAAABAACAAMAAAAPAAsABAAGAAAAAAAPAAwABAAFAAAAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="wall_back" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAABAA0AAgABAAgAAAAMAAEAAgACAAgAAAABAAwAAgABAAgAAAABAA4AAgABAAgAAAACAAsAAgACAAgAAAADAAsAAgACAAgAAAAEAAsAAgACAAgAAAAFAAsAAgACAAgAAAAGAAsAAgACAAgAAAAHAAIAAgABAAgAAAAHAAMAAgABAAsAAAAHAAQAAgAAAAsAAAAHAAUAAgABAAsAAAAHAAYAAgAAAAsAAAAHAAcAAgABAAsAAAAHAAgAAgAAAAsAAAAHAAkAAgABAAsAAAAHAAoAAgAAAAsAAAAHAAsAAgAAAAgAAAAIAAEAAgACAAgAAAAJAAEAAgACAAgAAAAKAAEAAgACAAgAAAALAAEAAgACAAgAAAANAAEAAgACAAgAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="wall_mask" type="TileMapLayer" parent="wall_back"]
visible = false
tile_map_data = PackedByteArray("AAD//wkAAwAAAAAAAAD//woAAwAAAAAAAAD//wsAAwAAAAAAAAD//wwAAwAAAAAAAAD//w0AAwAAAAAAAAAAAAkAAwAAAAAAAAAAAAoAAwAAAAAAAAAAAAsAAwAAAAAAAAAAAAwAAwAAAAAAAAAAAA0AAwAAAAAAAAABAAkAAwAAAAAAAAABAAoAAwAAAAAAAAABAAsAAwAAAAAAAAABAAwAAwAAAAAAAAACAAkAAwAAAAAAAAACAAoAAwAAAAAAAAACAAsAAwAAAAAAAAADAAkAAwAAAAAAAAADAAoAAwAAAAAAAAADAAsAAwAAAAAAAAAEAAkAAwAAAAAAAAAEAAoAAwAAAAAAAAAEAAsAAwAAAAAAAAAFAAkAAwAAAAAAAAAFAAoAAwAAAAAAAAAFAAsAAwAAAAAAAAAGAAkAAwAAAAAAAAAGAAoAAwAAAAAAAAAGAAsAAwAAAAAAAAAEAP//AwAAAAAAAAAEAAAAAwAAAAAAAAAEAAEAAwAAAAAAAAAEAAIAAwAAAAAAAAAEAAMAAwAAAAAAAAAEAAQAAwAAAAAAAAAEAAUAAwAAAAAAAAAEAAYAAwAAAAAAAAAEAAcAAwAAAAAAAAAEAAgAAwAAAAAAAAAFAP//AwAAAAAAAAAFAAAAAwAAAAAAAAAFAAEAAwAAAAAAAAAFAAIAAwAAAAAAAAAFAAMAAwAAAAAAAAAFAAQAAwAAAAAAAAAFAAUAAwAAAAAAAAAFAAYAAwAAAAAAAAAFAAcAAwAAAAAAAAAFAAgAAwAAAAAAAAAGAP//AwAAAAAAAAAGAAAAAwAAAAAAAAAGAAEAAwAAAAAAAAAGAAIAAwAAAAAAAAAGAAMAAwAAAAAAAAAGAAQAAwAAAAAAAAAGAAUAAwAAAAAAAAAGAAYAAwAAAAAAAAAGAAcAAwAAAAAAAAAGAAgAAwAAAAAAAAAHAP//AwAAAAAAAAAHAAAAAwAAAAAAAAAHAAEAAwAAAAAAAAAIAP//AwAAAAAAAAAIAAAAAwAAAAAAAAAIAAEAAwAAAAAAAAAJAP//AwAAAAAAAAAJAAAAAwAAAAAAAAAJAAEAAwAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAALAP//AwAAAAAAAAALAAAAAwAAAAAAAAALAAEAAwAAAAAAAAAMAP//AwAAAAAAAAAMAAAAAwAAAAAAAAAMAAEAAwAAAAAAAAANAP//AwAAAAAAAAANAAAAAwAAAAAAAAANAAEAAwAAAAAAAAAEAP7/AwAAAAAAAAAFAP7/AwAAAAAAAAAGAP7/AwAAAAAAAAAHAP7/AwAAAAAAAAAIAP7/AwAAAAAAAAAJAP7/AwAAAAAAAAAKAP7/AwAAAAAAAAALAP7/AwAAAAAAAAAMAP7/AwAAAAAAAAANAP7/AwAAAAAAAAD+/wgAAwAAAAAAAAD+/wkAAwAAAAAAAAD+/woAAwAAAAAAAAD+/wsAAwAAAAAAAAD+/wwAAwAAAAAAAAD+/w0AAwAAAAAAAAD//wgAAwAAAAAAAAAAAAgAAwAAAAAAAAABAAgAAwAAAAAAAAACAAgAAwAAAAAAAAADAAgAAwAAAAAAAAADAP7/AwAAAAAAAAADAP//AwAAAAAAAAADAAAAAwAAAAAAAAADAAEAAwAAAAAAAAADAAIAAwAAAAAAAAADAAMAAwAAAAAAAAADAAQAAwAAAAAAAAADAAUAAwAAAAAAAAADAAYAAwAAAAAAAAADAAcAAwAAAAAAAAAHAAIAAwAAAAAAAAAHAAMAAwAAAAAAAAAHAAQAAwAAAAAAAAAHAAUAAwAAAAAAAAAHAAYAAwAAAAAAAAAHAAcAAwAAAAAAAAAHAAgAAwAAAAAAAAAHAAkAAwAAAAAAAAAHAAoAAwAAAAAAAAAHAAsAAwAAAAAAAAABAA0AAwAAAAAAAAABAA4AAwAAAAAAAAAAAA4AAwAAAAAAAAD//w4AAwAAAAAAAAD+/w4AAwAAAAAAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="wall_front" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAACAA4AAgACAAgAAAADAA4AAgACAAgAAAAEAA4AAgACAAgAAAAFAA4AAgACAAgAAAAGAA4AAgACAAgAAAAHAA4AAgACAAgAAAAIAA4AAgACAAgAAAAJAA4AAgACAAgAAAAKAA4AAgACAAgAAAALAAwAAgABAAgAAAALAA0AAgABAAgAAAALAA4AAgAAAAgAAAAMAAsAAgACAAgAAAANAAIAAgABAAgAAAANAAMAAgABAAsAAAANAAQAAgAAAAsAAAANAAUAAgABAAsAAAANAAYAAgAAAAsAAAANAAcAAgABAAsAAAANAAgAAgAAAAsAAAANAAkAAgABAAsAAAANAAoAAgAAAAsAAAANAAsAAgAAAAgAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="roof" type="TileMapLayer" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_yk3c8")
tile_map_data = PackedByteArray("AAD//w0AAgAAAAIAAAAAAA0AAgAAAAQAAAABAA0AAgAAAAQAAAACAA0AAgAAAAQAAAADAA0AAgAAAAQAAAADAAwAAgABAAQAAAAEAAwAAgABAAQAAAAEAA0AAgAAAAQAAAAFAA0AAgAAAAQAAAAGAA0AAgAAAAQAAAAHAA0AAgAAAAQAAAAIAA0AAgAAAAQAAAAJAA0AAgAAAAQAAAAKAA0AAgAAAAYAAAAKAAwAAgABAAYAAAAKAAsAAgABAAYAAAAKAAoAAgABAAQAAAALAAoAAgAAAAQAAAAMAAoAAgAAAAYAAAAMAAkAAgABAAYAAAAMAAgAAgABAAYAAAAMAAcAAgABAAYAAAAMAAYAAgABAAYAAAAMAAUAAgABAAYAAAAMAAQAAgABAAYAAAAMAAMAAgABAAYAAAAMAAIAAgABAAYAAAAMAAEAAgABAAYAAAAMAAAAAgABAAYAAAALAAAAAgABAAQAAAAMAP//AgACAAYAAAALAP//AgACAAQAAAAKAP//AgACAAQAAAAJAP//AgACAAQAAAAIAP//AgACAAQAAAAHAP//AgACAAQAAAAGAP//AgACAAQAAAAFAP//AgACAAIAAAAFAAAAAgABAAIAAAAFAAEAAgABAAIAAAAFAAIAAgABAAIAAAAFAAMAAgABAAIAAAAFAAQAAgABAAIAAAAFAAUAAgABAAIAAAAFAAYAAgABAAIAAAAFAAcAAgABAAIAAAAFAAgAAgABAAIAAAAFAAkAAgABAAQAAAAEAAkAAgACAAQAAAADAAkAAgACAAQAAAADAAoAAgABAAQAAAACAAoAAgABAAQAAAABAAoAAgABAAQAAAABAAkAAgACAAQAAAAAAAkAAgACAAQAAAACAAkAAgACAAQAAAD//wwAAgABAAIAAAD//wsAAgABAAIAAAD//woAAgABAAIAAAD//wkAAgACAAIAAAALAAkAAgABAAQAAAALAAgAAgABAAQAAAALAAcAAgABAAQAAAALAAYAAgABAAQAAAALAAUAAgABAAQAAAALAAQAAgABAAQAAAALAAMAAgABAAQAAAALAAIAAgABAAQAAAALAAEAAgABAAQAAAAKAAkAAgABAAQAAAAKAAgAAgABAAQAAAAKAAcAAgABAAQAAAAKAAYAAgABAAQAAAAKAAUAAgABAAQAAAAKAAQAAgABAAQAAAAKAAMAAgABAAQAAAAKAAIAAgABAAQAAAAKAAEAAgABAAQAAAAKAAAAAgABAAQAAAAJAAwAAgABAAQAAAAJAAsAAgABAAQAAAAJAAoAAgABAAQAAAAJAAkAAgABAAQAAAAJAAgAAgABAAQAAAAJAAcAAgABAAQAAAAJAAYAAgABAAQAAAAJAAUAAgABAAQAAAAJAAQAAgABAAQAAAAJAAMAAgABAAQAAAAJAAIAAgABAAQAAAAJAAEAAgABAAQAAAAJAAAAAgABAAQAAAAIAAwAAgABAAQAAAAIAAsAAgABAAQAAAAIAAoAAgABAAQAAAAIAAkAAgABAAQAAAAIAAgAAgABAAQAAAAIAAcAAgABAAQAAAAIAAYAAgABAAQAAAAIAAUAAgABAAQAAAAIAAQAAgABAAQAAAAIAAMAAgABAAQAAAAIAAIAAgABAAQAAAAIAAEAAgABAAQAAAAIAAAAAgABAAQAAAAHAAwAAgABAAQAAAAHAAsAAgABAAQAAAAHAAoAAgABAAQAAAAHAAkAAgABAAQAAAAHAAgAAgABAAQAAAAHAAcAAgABAAQAAAAHAAYAAgABAAQAAAAHAAUAAgABAAQAAAAHAAQAAgABAAQAAAAHAAMAAgABAAQAAAAHAAIAAgABAAQAAAAHAAEAAgABAAQAAAAHAAAAAgABAAQAAAAGAAwAAgABAAQAAAAGAAsAAgABAAQAAAAGAAoAAgABAAQAAAAGAAkAAgABAAQAAAAGAAgAAgABAAQAAAAGAAcAAgABAAQAAAAGAAYAAgABAAQAAAAGAAUAAgABAAQAAAAGAAQAAgABAAQAAAAGAAMAAgABAAQAAAAGAAIAAgABAAQAAAAGAAEAAgABAAQAAAAGAAAAAgABAAQAAAAFAAwAAgABAAQAAAAFAAsAAgABAAQAAAAFAAoAAgABAAQAAAAEAAsAAgABAAQAAAAEAAoAAgABAAQAAAADAAsAAgABAAQAAAACAAwAAgABAAQAAAACAAsAAgABAAQAAAABAAwAAgABAAQAAAABAAsAAgABAAQAAAAAAAwAAgABAAQAAAAAAAsAAgABAAQAAAAAAAoAAgABAAQAAAA=")
tile_set = ExtResource("1_2kux5")

[node name="roof_top" type="Sprite2D" parent="roof"]
material = SubResource("ShaderMaterial_yk3c8")
position = Vector2(161, 201)
texture = ExtResource("4_j461t")
